--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Page Title</title>
 </head>
 <body>
-  <h1>Hello World</h1>
-  <p>My first paragraph.</p>
+  <h1>Hello</h1>
+  <p>World.</p>
 </body>
 </html>
