--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Page Title</title>
 </head>
 <body>
+  <img src="thanakonsocool.jpg" width="150px" height="200px"/>
   <h1>HELLO</h1>
   <p>ALL BIG WORLD .</p>
 </body>
