--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
   <img src="thanakonsocool.jpg" width="150px" height="200px"/>
   <h1>HELLO</h1>
-  <p>ALL BIG WORLD .</p>
+  <h1>ผม</h1>
+  <p>นายธนกร สว่างสูงเนิน</p>
+  <p>รหัสนักศึกษา 653450285-1</p>
 </body>
 </html>
