--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   <img src="thanakonsocool.jpg" width="150px" height="200px"/>
-  <h0.5>HELLO</h0.5>
-  <h0.5>ผม</h0.5>
-  <p>นายธนกร สว่างสูงเนิน</p>
-  <p>รหัสนักศึกษา 653450285-1</p>
+  <h1>HELLO</h1>
+  <h1>ผม</h1>
+  <p>นายธนกร สว่างสูงเนิน.</p>
+  <p>รหัสนักศึกษา 653450285-1.</p>
 </body>
 </html>
