--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <title>Page Title</title>
 </head>
 <body>
-  <img src="thanakonsocool.jpg" width="150px" height="200px"/>
   <h1>HELLO</h1>
+  <img src="thanakonsocool.jpg" width="150px" height="200px"/>
   <h1>ผม</h1>
   <p>นายธนกร สว่างสูงเนิน.</p>
   <p>รหัสนักศึกษา 653450285-1.</p>
+  <p>อีเมล thanakon.sa@kkumail.com</p>
+  <p>สหวิทยาการ วิทยาการคอมพิวเตอร์และสารสนเทศ</p>
 </body>
 </html>
