--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>HELLO</h1>
-  
+  <img src="thanakonsocool1.jpg" width="150px" height="200px"/>
   <h1>ผม</h1>
   <p>นายธนกร สว่างสูงเนิน.</p>
   <p>รหัสนักศึกษา 653450285-1.</p>
