--- a/todoroki.html
+++ b/todoroki.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Bootstrap To-Do List</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,18 +15,35 @@
     <script>
       function addtodo() {
         const inputValue = document.getElementById("input").value;
-        //create new element <li>
-        let newElement = document.createElement("li"); //<li></li>
-        newElement.classList.add("list-group-item"); //<li class="list-group-item"></li>
-        let newTxtElement = document.createTextNode(inputValue); //create Text
-        newElement.appendChild(newTxtElement); //<li>Text</li>
+        if (inputValue.trim() !== "") {
+          // Create new element <li>
+          let newElement = document.createElement("li");
+          newElement.classList.add("list-group-item", "d-flex", "justify-content-between", "align-items-center");
 
-        let listElement = document.getElementById("listtodo");
-        listElement.appendChild(newElement);
+          // Create text node
+          let newTxtElement = document.createTextNode(inputValue);
+          newElement.appendChild(newTxtElement);
+
+          // Create delete button
+          let deleteButton = document.createElement("button");
+          deleteButton.classList.add("btn", "btn-danger", "btn-sm");
+          deleteButton.innerHTML = "&times;";
+          deleteButton.onclick = function() {
+            this.parentElement.remove();
+          };
+          newElement.appendChild(deleteButton);
+
+          // Append new item to list
+          let listElement = document.getElementById("listtodo");
+          listElement.appendChild(newElement);
+
+          // Clear the input field after adding the item
+          document.getElementById("input").value = "";
+        }
       }
     </script>
     <div class="container">
-      <h1 class="my-3">My to-do</h1>
+      <h1 class="my-3">My To-Do List</h1>
       <div class="row">
         <div class="col col-md-4 col-sm-12">
           <div class="input-group mb-3">
@@ -34,7 +51,7 @@
               id="input"
               type="text"
               class="form-control"
-              placeholder="ใส่สิ่งที่คุณต้องการจะทำ"
+              placeholder="Enter a task"
               aria-label="todo name"
               aria-describedby="button-add"
             />
@@ -50,7 +67,10 @@
         </div>
         <div class="col col-md-8 col-sm-12">
           <ul class="list-group" id="listtodo">
-            <li class="list-group-item">An item</li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              An item
+              <button class="btn btn-danger btn-sm" onclick="this.parentElement.remove();">&times;</button>
+            </li>
           </ul>
         </div>
       </div>
