--- a/todoroki.html
+++ b/todoroki.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap To-Do List</title>
+    <title>Bootstrap demo</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,47 +14,56 @@
   <body>
     <script>
       function addtodo() {
-        const inputValue = document.getElementById("input").value;
-        if (inputValue.trim() !== "") {
-          // Create new element <li>
-          let newElement = document.createElement("li");
-          newElement.classList.add("list-group-item", "d-flex", "justify-content-between", "align-items-center");
-
-          // Create text node
-          let newTxtElement = document.createTextNode(inputValue);
-          newElement.appendChild(newTxtElement);
-
-          // Create clear text button
-          let clearTextButton = document.createElement("button");
-          clearTextButton.classList.add("btn", "btn-warning", "btn-sm", "ms-2");
-          clearTextButton.innerHTML = "Clear Text";
-          clearTextButton.onclick = function() {
-            newTxtElement.textContent = "";
-          };
-          newElement.appendChild(clearTextButton);
-
-          // Append new item to list
-          let listElement = document.getElementById("listtodo");
-          listElement.appendChild(newElement);
-
-          // Clear the input field after adding the item
-          document.getElementById("input").value = "";
+        const inputValue = document.getElementById("input").value.trim();
+        
+        if (inputValue === "") {
+          return; // if input is empty, do nothing
         }
+
+        let listElement = document.getElementById("listtodo");
+        
+        // Clear existing items
+        listElement.innerHTML = "";
+
+        // Split input into items by newline
+        const items = inputValue.split('\n');
+
+        // Create new items
+        items.forEach(item => {
+          if (item.trim() !== "") {
+            let newElement = document.createElement("li");
+            newElement.classList.add("list-group-item");
+            let newTxtElement = document.createTextNode(item.trim());
+            newElement.appendChild(newTxtElement);
+
+            // create delete button
+            let deleteButton = document.createElement("button");
+            deleteButton.className = "btn btn-danger btn-sm ms-2";
+            deleteButton.textContent = "-";
+            deleteButton.onclick = function () {
+              this.parentNode.remove(); // remove the <li> when delete button is clicked
+            };
+            newElement.appendChild(deleteButton);
+
+            listElement.appendChild(newElement);
+          }
+        });
+
+        // Clear input after adding todos
+        document.getElementById("input").value = "";
       }
     </script>
     <div class="container">
-      <h1 class="my-3">My To-Do List</h1>
+      <h1 class="my-3">My to de do</h1>
       <div class="row">
         <div class="col col-md-4 col-sm-12">
           <div class="input-group mb-3">
-            <input
+            <textarea
               id="input"
-              type="text"
               class="form-control"
-              placeholder="Enter a task"
+              placeholder="What u do like"
               aria-label="todo name"
-              aria-describedby="button-add"
-            />
+            ></textarea>
             <button
               class="btn btn-primary"
               type="button"
@@ -67,10 +76,7 @@
         </div>
         <div class="col col-md-8 col-sm-12">
           <ul class="list-group" id="listtodo">
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              An item
-              <button class="btn btn-warning btn-sm ms-2" onclick="this.previousSibling.textContent = '';">Clear Text</button>
-            </li>
+            <li class="list-group-item">An item</li>
           </ul>
         </div>
       </div>
