--- a/todoroki.html
+++ b/todoroki.html
@@ -54,14 +54,14 @@
       }
     </script>
     <div class="container">
-      <h1 class="my-3">My to de do</h1>
+      <h1 class="my-3">My to do list</h1>
       <div class="row">
         <div class="col col-md-4 col-sm-12">
           <div class="input-group mb-3">
             <textarea
               id="input"
               class="form-control"
-              placeholder="What u do like"
+              placeholder="What would you like to do?"
               aria-label="todo name"
             ></textarea>
             <button
