--- a/pokemondex/index.html
+++ b/pokemondex/index.html
@@ -1,48 +1,21 @@
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <style>
-      .card {
-        margin-bottom: 1rem;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Pokedex Lab</h1>
-      <div id="name" class="row"></div>
-    </div>
-    <script>
-      fetch("https://pokeapi.co/api/v2/pokemon?limit=20&offset=0")
-        .then((res) => res.json())
-        .then((data) => {
-          const datas = data["results"];
-          const ele = document.getElementById("name");
-          datas.forEach((element, index) => {
-            const imgURL = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${index + 1}.png`
-            ele.innerHTML +=
-              "<div class='col-3'>" +
-              "<div class='card'>" +
-              `<img class='card-img-top' src='${imgURL}'>` +
-              "<div class='card-body'>" +
-              element["name"] +
-              "</div></div></div>";
-          });
-        })
-        .catch((err) => console.error(err));
-    </script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokémon List</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <h1>Pokémon List</h1>
+        <input type="text" id="search-input" placeholder="Search Pokémon...">
+    </header>
+    <main>
+        <div id="pokemon-list" class="pokemon-grid"></div>
+        <button id="load-more">Load More Pokémon</button>
+    </main>
+    <script src="main.js"></script>
+</body>
 </html>
