--- a/Profile/index.html
+++ b/Profile/index.html
@@ -11,5 +11,8 @@
   <p>รหัสนักศึกษา 653450285-1.</p>
   <p>อีเมล thanakon.sa@kkumail.com</p>
   <p>สหวิทยาการ วิทยาการคอมพิวเตอร์และสารสนเทศ</p>
+  <h1>ผลงาน</h1>
+  <li><a href="https://github.com/ThanakonSA/ThanakonSA.github.io.git">Frontend</a></li>
+  <li><a href="https://github.com/ThanakonSA/TheFinal.git">OOP</a></li>
 </body>
 </html>
