--- a/Profile/index.html
+++ b/Profile/index.html
@@ -2,17 +2,22 @@
 <html>
 <head>
   <title>Page Title</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-  <h1>HELLO</h1>
-  <img src="thanakonsocool1.jpg" width="150px" height="200px"/>
-  <h1>ผม</h1>
-  <p>นายธนกร สว่างสูงเนิน.</p>
-  <p>รหัสนักศึกษา 653450285-1.</p>
-  <p>อีเมล thanakon.sa@kkumail.com</p>
-  <p>สหวิทยาการ วิทยาการคอมพิวเตอร์และสารสนเทศ</p>
-  <h1>ผลงาน</h1>
-  <li><a href="https://github.com/ThanakonSA/ThanakonSA.github.io.git">Frontend</a></li>
-  <li><a href="https://github.com/ThanakonSA/TheFinal.git">OOP</a></li>
+  <div class="container">
+    <h1>HELLO</h1>
+    <img src="thanakonsocool1.jpg" width="150px" height="200px"/>
+    <h1>ผม</h1>
+    <p>นายธนกร สว่างสูงเนิน.</p>
+    <p>รหัสนักศึกษา 653450285-1.</p>
+    <p>อีเมล thanakon.sa@kkumail.com</p>
+    <p>สหวิทยาการ วิทยาการคอมพิวเตอร์และสารสนเทศ</p>
+    <h1>ผลงาน</h1>
+    <ul class="project-list">
+      <li><a href="https://github.com/ThanakonSA/ThanakonSA.github.io.git">Frontend</a></li>
+      <li><a href="https://github.com/ThanakonSA/TheFinal.git">OOP</a></li>
+    </ul>
+  </div>
 </body>
 </html>
